# cmake

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wz/cmake/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: demo.html
app/src/main/cpp/: CMakeLists.txt  fmodsound.cpp  fmodsound.h  lame_encode.cpp  lame_encode.h  mp3_encode.cpp  mp3_encode.h  native-lib.cpp  native-lib.h  vm_manager.cpp  vm_manager.h
app/src/main/cpp/lame-3.100_libmp3lame/: Mp3Encoder.c  Mp3Encoder.h
app/src/main/java/com/wz/cmake/: Kotterknife.kt  MainActivity.kt  UserProxyService.kt
app/src/main/java/com/wz/cmake/adapter/: GenderAdapter.kt
app/src/main/java/com/wz/cmake/api/: AudioServiceImpl.kt  BeanPostProcessor.kt  EmailService.kt  IAudioService.kt  IMonitorApi.kt  IOrderNotifier.kt  MonitorApiImpl.kt  OrderService.kt
app/src/main/java/com/wz/cmake/audio/: AudioRecordManager.kt  AudioRecordStatus.kt  ChangeBuffer.kt  EncodeDeleteListener.kt  EncodeFinishListener.kt  Mp3EncodeThread.kt  Mp3Encoder.kt  RecordDataListener.kt  RecordFftDataListener.kt  RecordResultListener.kt  RecordSoundSizeListener.java  RecordStateListener.kt
app/src/main/java/com/wz/cmake/audio/fft/: Complex.kt  FFT.kt  FftFactory.kt  FftLevel.kt
app/src/main/java/com/wz/cmake/audio/record/: AudioRecorder.kt  RecordConfig.kt  RecordFormat.kt
app/src/main/java/com/wz/cmake/model/: Order.kt  User.kt
app/src/main/java/com/wz/cmake/ui/: JSBridgeActivity.kt
app/src/main/java/com/wz/cmake/util/: APPUtil.kt  ByteUtils.kt  ContextUtil.kt  DateUtil.java  FileUtil.kt  GsonUtil.kt  WavUtils.kt
app/src/main/java/com/wz/cmake/widget/: AudioRecordView.java  RecordButton.java
app/src/main/res/drawable/: audio_delete_normal_bg.xml  audio_delete_pressed_bg.xml
app/src/main/res/layout/: activity_js_bridge.xml  activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wz/cmake/: ExampleUnitTest.kt
hello-plugin/: build.gradle
hello-plugin/src/functionalTest/groovy/com/wz/plugin/: HelloPluginFunctionalTest.groovy
hello-plugin/src/main/groovy/com/wz/plugin/: HelloPlugin.groovy
hello-plugin/src/test/groovy/com/wz/plugin/: HelloPluginTest.groovy
